opam-version: "2.0"
homepage: "https://certikos.github.io/rbgs/html/toc.html"
bug-reports: "https://github.com/CertiKOS/rbgs/issues"
dev-repo: "git+https://github.com/CertiKOS/rbgs.git"
version: "dev"

synopsis: "Refinement-Based Game Semantics"
depends: [
  "coq" {= "8.15.1"}
  "coq-iris" {= "4.0.0"}
  "menhir"
]
